# paper-server-rust

./: Cargo.toml  Dockerfile  rustfmt.toml
graphql/: .gitignore  Cargo.toml  graphiql.html  sample.cfg
graphql/src/: config.rs  context.rs  lib.rs  logger.rs  module.rs  mutation.rs  query.rs
graphql/src/graphql/: cursor.rs  mod.rs  order.rs  page_info.rs  result.rs
graphql/src/models/: auth.rs  mod.rs  paper.rs  user.rs
impl/: Cargo.toml
impl/src/: auth.rs  lib.rs  paper.rs  user.rs
src/: auth.rs  lib.rs  paper.rs  user.rs
