[package]
name = "paper"
version = "0.1.0"
authors = ["LiYechao <liyechao@yechao.xyz>"]
edition = "2018"

[workspace]
members = [
    "impl",
    "graphql",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
jsonwebtoken = "7.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
strum = { version = "0.20", features = ["derive"] }
