[package]
name = "paper_impl"
version = "0.1.0"
authors = ["LiYechao <liyechao@yechao.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bson = { version = "1.2", features = ["u2i"] }
futures = "0.3"
hyper = "0.13"
hyper-tls = "0.4"
lazy_static = "1.4"
log = "0.4"
mongodb = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaku = "0.6"

paper = { path = ".." }
